--- a/index.html
+++ b/index.html
@@ -275,15 +275,15 @@
   <footer class="footer text-center" style="background-color:#002f4b; color:white; padding:30px 0;">
     <div class="container">
       <div class="social-icons mb-3">
-        <a href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
+        <a href="https://www.linkedin.com/in/alkababu/" target="_blank" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgAiBJo0mFu6bWkp_crjPMPpRLpRfgfY35ov_mx2aWDV5cWO3UeDjfa6c9QvYhmN4SuDc&usqp=CAU" 
                alt="LinkedIn" style="width:24px; height:24px; margin-right:8px;"> LinkedIn
         </a>
-        <a href="https://wa.me/YOURNUMBER?text=Hello!" target="_blank" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
+        <a href="+918921763042" target="_blank" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
           <img src="https://t3.ftcdn.net/jpg/05/32/20/62/360_F_532206245_N1xYEHrZVIWU1ihamWwmDbh1gZWGU7Jl.jpg" 
                alt="WhatsApp" style="width:24px; height:24px; margin-right:8px;"> WhatsApp
         </a>
-        <a href="mailto:youremail@gmail.com" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
+        <a href="alkababu2255@gmail.com" style="display:inline-flex; align-items:center; margin:0 10px; color:white; text-decoration:none;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTRdnDiESe_tkye1hqzAJJg56erlIriA57BQ&s" 
                alt="Gmail" style="width:24px; height:24px; margin-right:8px;"> Gmail
         </a>
@@ -299,3 +299,4 @@
 
 </body>
 </html>
+
