--- a/index.html
+++ b/index.html
@@ -236,35 +236,51 @@
 
       </div>
     </div>
-  </section>
+</section>
 
-  <!-- CONTACT SECTION -->
-  <section class="bg-white p-5" id="contactme-section">
-    <div class="container">
-      <h1 class="text-center">Contact Me</h1>
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+
+        <!-- UPDATED FORM -->
+        <form class="p-4 shadow rounded bg-white" action="sendmail.php" method="POST">
+
+          <div class="form-group mb-3">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email" required>
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" name="city" id="inputCity" placeholder="Enter your city" required>
+          </div>
+
+          <div class="form-group mb-4">
+            <label for="inputZip">Mobile</label>
+            <input type="text" class="form-control" name="mobile" id="inputZip" placeholder="Enter your mobile number" required>
+          </div>
+
+          <div style="text-align:center;">
+            <button type="submit" style="
+                background:#00CFFF;
+                color:black;
+                padding:10px 20px;
+                border:none;
+                border-radius:8px;
+                font-size:16px;
+                cursor:pointer;">
+              Learn More
+            </button>
+          </div>
+
+        </form>
+
+      </div>
     </div>
-<form class="p-4 shadow rounded bg-white" action="sendmail.php" method="POST">
-  <div class="form-group mb-3">
-    <label for="inputEmail4">Email</label>
-    <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email" required>
   </div>
+</section>
 
-  <div class="form-group mb-3">
-    <label for="inputCity">City</label>
-    <input type="text" class="form-control" name="city" id="inputCity" placeholder="Enter your city" required>
-  </div>
-
-  <div class="form-group mb-4">
-    <label for="inputZip">Mobile</label>
-    <input type="text" class="form-control" name="mobile" id="inputZip" placeholder="Enter your mobile number" required>
-  </div>
-
-  <div style="text-align:center;">
-    <button type="submit" style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
-      Learn More
-    </button>
-  </div>
-</form>
 
 
   <!-- FOOTER -->
@@ -295,5 +311,6 @@
 
 </body>
 </html>
+
 
 
