--- a/index.html
+++ b/index.html
@@ -15,6 +15,72 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+<?php
+if ($_POST) {
+    $email = $_POST['email'];
+    $city = $_POST['city'];
+    $mobile = $_POST['mobile'];
+
+    $to = "alkababu2255@gmail.com"; // Receiving Email
+    $subject = "New Customer Contact Details";
+
+    $message = "A new customer submitted details:\n\n";
+    $message .= "Email: $email\n";
+    $message .= "City: $city\n";
+    $message .= "Mobile: $mobile\n";
+
+    $headers = "From: noreply@yourdomain.com";
+
+    if (mail($to, $subject, $message, $headers)) {
+        $success = "Thank you! Your details have been sent successfully.";
+    } else {
+        $error = "Error: Unable to send email.";
+    }
+}
+?>
+
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+
+        <form class="p-4 shadow rounded bg-white" action="" method="POST">
+
+          <?php if (!empty($success)): ?>
+            <div class="alert alert-success"><?php echo $success; ?></div>
+          <?php endif; ?>
+
+          <?php if (!empty($error)): ?>
+            <div class="alert alert-danger"><?php echo $error; ?></div>
+          <?php endif; ?>
+
+          <div class="form-group mb-3">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email" required>
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" name="city" id="inputCity" placeholder="Enter your city" required>
+          </div>
+
+          <div class="form-group mb-4">
+            <label for="inputZip">Mobile</label>
+            <input type="text" class="form-control" name="mobile" id="inputZip" placeholder="Enter your mobile number" required>
+          </div>
+
+          <div style="text-align:center;">
+            <button type="submit" style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
+              Learn More
+            </button>
+          </div>
+
+        </form>
+
+      </div>
+    </div>
+  </div>
+</section>
 
   <style>
     body {
@@ -236,7 +302,7 @@
 
       </div>
     </div>
-  </section>
+    </section>
 
   <section class="py-5 bg-light">
     <div class="container">
@@ -245,51 +311,24 @@
           <form class="p-4 shadow rounded bg-white">
             <div class="form-group mb-3">
               <label for="inputEmail4">Email</label>
-              <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+              <input type="email" class="form-control" id="alkababu2255@gmail.com" placeholder="Email">
             </div>
             <div class="form-group mb-3">
               <label for="inputCity">City</label>
-              <input type="text" class="form-control" id="inputCity" placeholder="Enter your city">
+              <input type="text" class="form-control" id="alkababu2255@gmail.com" placeholder="Enter your city">
             </div>
             <div class="form-group mb-4">
               <label for="inputZip">Mobile</label>
-              <input type="text" class="form-control" id="inputZip" placeholder="Enter your mobile number">
+              <input type="text" class="form-control" id="alkababu2255@gmail.com" placeholder="Enter your mobile number">
             </div>
             <div style="text-align:center;">
-              <button style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">Submit</button>
+              <button style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">Learn More</button>
             </div>
           </form>
         </div>
       </div>
     </div>
   </section>
-
-  <?php
-if ($_POST) {
-
-    $email = $_POST['email'];
-    $city = $_POST['city'];
-    $mobile = $_POST['mobile'];
-
-    // YOUR EMAIL
-    $to = "alkababu2255@gmail.com";
-
-    $subject = "New Customer Contact Details";
-
-    $message = "A new customer submitted the form:\n\n";
-    $message .= "Email: $email\n";
-    $message .= "City: $city\n";
-    $message .= "Mobile: $mobile\n";
-
-    $headers = "From: noreply@yourdomain.com";
-
-    if (mail($to, $subject, $message, $headers)) {
-        echo "Thank you! Your details have been sent successfully.";
-    } else {
-        echo "Error: Unable to send email.";
-    }
-}
-?>
 
 
 
