--- a/index.html
+++ b/index.html
@@ -304,31 +304,73 @@ if ($_POST) {
     </div>
     </section>
 
-  <section class="py-5 bg-light">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <form class="p-4 shadow rounded bg-white">
-            <div class="form-group mb-3">
-              <label for="inputEmail4">Email</label>
-              <input type="email" class="form-control" id="alkababu2255@gmail.com" placeholder="Email">
-            </div>
-            <div class="form-group mb-3">
-              <label for="inputCity">City</label>
-              <input type="text" class="form-control" id="alkababu2255@gmail.com" placeholder="Enter your city">
-            </div>
-            <div class="form-group mb-4">
-              <label for="inputZip">Mobile</label>
-              <input type="text" class="form-control" id="alkababu2255@gmail.com" placeholder="Enter your mobile number">
-            </div>
-            <div style="text-align:center;">
-              <button style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">Learn More</button>
-            </div>
-          </form>
-        </div>
+  <?php
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+
+    $email  = $_POST['email'];
+    $city   = $_POST['city'];
+    $mobile = $_POST['mobile'];
+
+    // Your email
+    $to = "alkababu2255@gmail.com";
+    $subject = "New Form Submission Details";
+
+    $message = "
+    New customer details received:\n\n
+    Email: $email
+    City: $city
+    Mobile: $mobile
+    ";
+
+    $headers = "From: no-reply@yourdomain.com";
+
+    if (mail($to, $subject, $message, $headers)) {
+        $msg = "Details sent successfully!";
+    } else {
+        $msg = "Mail sending failed!";
+    }
+}
+?>
+
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+
+        <form class="p-4 shadow rounded bg-white" method="POST" action="">
+
+          <?php if (!empty($msg)): ?>
+            <div class="alert alert-info"><?php echo $msg; ?></div>
+          <?php endif; ?>
+
+          <div class="form-group mb-3">
+            <label>Email</label>
+            <input type="email" class="form-control" name="email" placeholder="Email" required>
+          </div>
+
+          <div class="form-group mb-3">
+            <label>City</label>
+            <input type="text" class="form-control" name="city" placeholder="Enter your city" required>
+          </div>
+
+          <div class="form-group mb-4">
+            <label>Mobile</label>
+            <input type="text" class="form-control" name="mobile" placeholder="Enter your mobile number" required>
+          </div>
+
+          <div style="text-align:center;">
+            <button type="submit" style="background:#00CFFF; color:black; padding:10px 20px; border:none; border-radius:8px; font-size:16px;">
+              Learn More
+            </button>
+          </div>
+
+        </form>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
 
 
@@ -360,6 +402,7 @@ if ($_POST) {
 
 </body>
 </html>
+
 
 
 
