--- a/index.html
+++ b/index.html
@@ -201,31 +201,36 @@
     <h1 class="text-center mb-5">Contact Me</h1>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form class="p-4 shadow rounded bg-white" method="POST" action="">
-          <?php if (!empty($msg)): ?>
-            <div class="alert alert-info"><?php echo $msg; ?></div>
-          <?php endif; ?>
+        <!-- Formspree Form -->
+        <form class="p-4 shadow rounded bg-white" action="https://formspree.io/f/xblrjypw" method="POST">
+          <div class="mb-3">
+            <label>Name</label>
+            <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+          </div>
           <div class="mb-3">
             <label>Email</label>
-            <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+            <input type="email" name="email" class="form-control" placeholder="Your Email" required>
           </div>
           <div class="mb-3">
             <label>City</label>
-            <input type="text" class="form-control" name="city" placeholder="Your City" required>
+            <input type="text" name="city" class="form-control" placeholder="Your City">
           </div>
-          <div class="mb-4">
+          <div class="mb-3">
             <label>Mobile</label>
-            <input type="text" class="form-control" name="mobile" placeholder="Your Mobile Number" required>
+            <input type="text" name="mobile" class="form-control" placeholder="Your Mobile Number" required>
+          </div>
+          <div class="mb-3">
+            <label>Message</label>
+            <textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-custom w-50">Send Details</button>
+            <button type="submit" class="btn btn-custom w-50">Send Message</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </section>
-
 <!-- FOOTER -->
 <footer>
   <div class="container">
@@ -240,3 +245,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
