--- a/index.html
+++ b/index.html
@@ -182,25 +182,25 @@
     <h1 class="text-center mb-5">Contact Me</h1>
     <div class="row justify-content-center">
       <div class="col-md-7">
-        <form action="https://formspree.io/f/mjkkjvzw" method="POST" class="p-5 shadow rounded bg-white">
+        <form action="mailto:alkababu2255@gmail.com" method="post" enctype="text/plain" class="p-5 shadow rounded bg-white">
           <div class="row">
             <div class="col-md-6 mb-3">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+              <input type="text" name="Name" class="form-control" placeholder="Your Name" required>
             </div>
             <div class="col-md-6 mb-3">
-              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+              <input type="email" name="Email" class="form-control" placeholder="Your Email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 mb-3">
-              <input type="text" name="city" class="form-control" placeholder="Your City">
+              <input type="text" name="City" class="form-control" placeholder="Your City">
             </div>
             <div class="col-md-6 mb-3">
-              <input type="text" name="mobile" class="form-control" placeholder="Mobile Number" required>
+              <input type="text" name="Mobile" class="form-control" placeholder="Mobile Number" required>
             </div>
           </div>
           <div class="mb-3">
-            <textarea name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
+            <textarea name="Message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
           </div>
           <div class="text-center">
             <button type="submit" class="btn btn-custom px-5">Send Message</button>
@@ -210,6 +210,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- FOOTER -->
 <footer>
@@ -232,3 +233,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
