--- a/index.html
+++ b/index.html
@@ -189,30 +189,25 @@
         </div>
 
         <!-- Contact Form -->
-        <form id="contactForm" class="p-5 shadow rounded bg-white">
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-            </div>
-            <div class="col-md-6 mb-3">
-              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <input type="text" name="city" class="form-control" placeholder="Your City">
-            </div>
-            <div class="col-md-6 mb-3">
-              <input type="text" name="mobile" class="form-control" placeholder="Mobile Number" required>
-            </div>
-          </div>
-          <div class="mb-3">
-            <textarea name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
-          </div>
-          <div class="text-center">
-            <button type="submit" class="btn btn-custom px-5">Send Message</button>
-          </div>
-        </form>
+        <form action="mailto:alkababu2255@gmail.com" method="post" enctype="text/plain">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="Name" required><br><br>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="Email" required><br><br>
+
+  <label for="city">City:</label>
+  <input type="text" id="city" name="City"><br><br>
+
+  <label for="mobile">Mobile:</label>
+  <input type="text" id="mobile" name="Mobile" required><br><br>
+
+  <label for="message">Message:</label><br>
+  <textarea id="message" name="Message" rows="5" required></textarea><br><br>
+
+  <button type="submit">Send Message</button>
+</form>
+
       </div>
     </div>
   </div>
@@ -267,6 +262,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
