--- a/index.html
+++ b/index.html
@@ -213,31 +213,26 @@
   </div>
 </section>
 
+<!-- JavaScript for AJAX Submit (No Page Refresh) -->
 <script>
   document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault(); 
-
-    const formData = new FormData(this);
-
-    fetch('https://formspree.io/f/mgejqpga', {
+    e.preventDefault();
+    
+    fetch('https://formsubmit.co/alkababu@gmail.com', {
       method: 'POST',
-      body: formData,
-      headers: {
-        'Accept': 'application/json'
-      }
+      body: new FormData(this),
+      headers: { 'Accept': 'application/json' }
     })
-    .then(response => {
-      if (response.ok) {
-        // Success → Thank you message 
+    .then(response => response.json())
+    .then(data => {
+      if (data.success === 'Message sent!') {
         document.getElementById('contactForm').style.display = 'none';
-        document.getElementById('thankyou-message').style.display = 'block';
+        document.getElementById('thankyou').style.display = 'block';
       } else {
-        alert('Oops! Something went wrong. Please try again.');
+        alert('Error: Please try again.');
       }
     })
-    .catch(() => {
-      alert('Network error. Please check your internet connection.');
-    });
+    .catch(() => alert('Network error. Try again.'));
   });
 </script>
 
@@ -262,6 +257,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
