--- a/index.html
+++ b/index.html
@@ -175,19 +175,21 @@
     </div>
   </div>
 <!-- CONTACT SECTION - Working Form to Receive at alkababu@gmail.com -->
+<!-- CONTACT SECTION – ONLY THIS (Copy-Paste മതി) -->
 <section id="contact" class="bg-light">
   <div class="container">
     <h1 class="text-center mb-5">Contact Me</h1>
     <div class="row justify-content-center">
       <div class="col-md-7">
-        <!-- Success Message -->
-        <div id="thankyou" class="alert alert-success text-center p-4" style="display: none;">
+
+        <!-- Thank You Message -->
+        <div id="thankyou" class="alert alert-success text-center p-4" style="display:none;">
           <h4>Thank You!</h4>
-          <p>Your message has been sent successfully. I'll reply soon.</p>
+          <p>Your message has been sent successfully.<br>I'll contact you soon.</p>
         </div>
-        
-        <!-- Form -->
-        <form id="contactForm" class="p-5 shadow rounded bg-white">
+
+        <!-- Contact Form -->
+        <form id="myform" class="p-5 shadow rounded bg-white">
           <div class="row">
             <div class="col-md-6 mb-3">
               <input type="text" name="name" class="form-control" placeholder="Your Name" required>
@@ -215,6 +217,10 @@
     </div>
   </div>
 </section>
+
+<!-- Only this script (No change needed) -->
+<script>
+
 
 <!-- JavaScript for AJAX Submit (No Page Refresh) -->
 <script>
@@ -259,7 +265,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html>  
+
 
 
 
