--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2>About Me</h2>
         <p class="lead"><strong>"Today's dedication becomes tomorrow's success"</strong></p>
         <p>Hello! I am <strong>Alka Babu</strong> from Kasaragod, Kerala.</p>
-        <p>I specialize in <strong>Web Development, SEO</strong> and <strong>Software Solutions</strong>. Skilled in HTML, CSS, JavaScript, Bootstrap, React, Next.js, Java, .</p>
+        <p>I specialize in <strong>Web Development, SEO</strong> and <strong>Software Solutions</strong>. Skilled in HTML, CSS, JavaScript, Bootstrap, React, Next.js, Java</p>
         <p>Passionate about creating fast, responsive, and SEO-friendly websites that help businesses grow online.</p>
         <a href="#contact" class="btn btn-custom mt-3">Get In Touch</a>
       </div>
@@ -266,6 +266,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>  
+
 
 
 
